@@ -5,7 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import io.prometheus.client.it.common.ExporterTest;
 import io.prometheus.metrics.expositionformats.generated.com_google_protobuf_4_32_1.Metrics;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 import org.junit.jupiter.api.Test;
@@ -20,7 +20,7 @@ class ApplicationTest {
     ExporterTest.Response response =
         ExporterTest.scrape(
             "GET",
-            new URL("http://localhost:8080/actuator/prometheus"),
+            URI.create("http://localhost:8080/actuator/prometheus"),
             "Accept",
             "application/vnd.google.protobuf; proto=io.prometheus.client.MetricFamily;"
                 + " encoding=delimited");
